--- a/bash/config
+++ b/bash/config
@@ -13,6 +13,10 @@ BLUE='\e[0;34m'
 MAGENTA='\e[0;35m'
 CYAN='\e[0;36m'
 WHITE='\e[0;37m'
+LIGHT_GREEN='\\033[1;32m'
+LIGHT_BLUE='\\033[1;34m'
+LIGHT_GREY='\\033[0;37m'
+DARK_GREY='\\033[1;30m'
 # emphasized (bolded) colors
 EBLACK='\e[1;30m'
 ERED='\e[1;31m'
