Fancy up git diffs

--- a/.gitconfig
+++ b/.gitconfig
@@ -4,4 +4,10 @@
 
 [core]
   excludesfile = /Users/ali/.bin/dotfiles/.gitignore_global
-  page = less -x1,5
+
+[pager]
+      diff = diff-so-fancy | less --tabs=1,5 -RFX
+      show = diff-so-fancy | less --tabs=1,5 -RFX
+
+[diff-so-fancy]
+	markEmptyLines = false
