--- a/.gitconfig
+++ b/.gitconfig
@@ -6,8 +6,9 @@
   excludesfile = /Users/ali/.bin/dotfiles/.gitignore_global
 
 [pager]
-      diff = diff-so-fancy | less --tabs=1,5 -RFX
-      show = diff-so-fancy | less --tabs=1,5 -RFX
+  diff = diff-so-fancy | less --tabs=1,5 -RFX
+  show = diff-so-fancy | less --tabs=1,5 -RFX
+	branch = false
 
 [diff-so-fancy]
 	markEmptyLines = false
