--- a/private_Library/private_Application Support/private_Code/User/settings.json
+++ b/private_Library/private_Application Support/private_Code/User/settings.json
@@ -11,10 +11,11 @@
   "editor.rulers": [80],
   "editor.bracketPairColorization.enabled": true,
   "editor.semanticHighlighting.enabled": true,
+  "editor.stickyScroll.enabled": true,
 
   "workbench.sideBar.location": "right",
   "explorer.openEditors.visible": 0,
-  
+
   "workbench.startupEditor": "newUntitledFile",
   "window.title": "${activeEditorMedium}${separator}${rootName}",
 
@@ -24,6 +25,8 @@
   "editor.formatOnSave": true,
 
   "workbench.colorTheme": "In Bed by 7pm",
+
+  "extensions.ignoreRecommendations": true,
 
   "[javascript]": {
     "editor.defaultFormatter": "esbenp.prettier-vscode"
@@ -48,6 +51,7 @@
     "csrf",
     "fallback",
     "inbox",
+    "keypresses",
     "prefetch",
     "preprocessors",
     "repos",
